Sudoku Solving improvements