@@ -5,6 +5,7 @@ import lombok.NoArgsConstructor;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -12,11 +13,14 @@ public class DefaultSudokuAlgorithmProvider {
 
     public static List<SudokuAlgorithm> getDefaultSudokuAlgorithms() {
         return Stream.of(
-                        new SinglePositionCheck(),
                         new HiddenSingleAndPointingGroupsCheck(),
                         new ObviousAndHiddenGroupCheck()
                 )
                 .sorted(Comparator.comparing(SudokuAlgorithm::getPriority))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public static SudokuAlgorithm getDefaultGuessingAlgorithm() {
+        return new RecursiveGuesser();
     }
 }
